<resources>
    <string name="about_contact">"If you find any bugs, please write a post in the &lt;a href=https://plus.google.com/communities/115768021623513120266>Gear Shift G+ community&lt;/a>, filed under bugs. Doing so will also show other people whether the bug has been reported already. Be sure to turn on the 'Debug' options under 'General Settings', and include the logcat related to the app."</string>
    <string name="about_description">Gear Shift is a Transmission remote client, created to provide a great experience when dealing with all aspects of torrent management.</string>
    <string name="about_donation">This app is provided for free, without any annoying ads. If you find it useful, consider &lt;a href=https://www.paypal.com/bg/cgi-bin/webscr?cmd=_donations&amp;business=support@sugr.org&amp;lc=US&amp;item_name=Gear Shift&amp;no_note=1&amp;no_shipping=1&amp;currency_code=EUR>sending a beer or two this way&lt;/a>.</string>
    <string name="about_item">About</string>
    <string name="about_name">Gear Shift</string>
    <string name="access_denied_empty_list">"&lt;h2>&lt;font color=#cc0000>Access denied!&lt;/font>&lt;/h2>Your credentials might be incorrect, or your IP address might not be in the daemon's white list."</string>
    <string name="add_directory_option">Add directory</string>
    <string name="add_magnet">New magnet link</string>
    <string name="add_profile_option">Add profile</string>
    <string name="add_torrent">New torrent</string>
    <string name="alt_speed">Alternate speed limit</string>
    <string name="alt_speed_label_off">Alternate speed limit off</string>
    <string name="alt_speed_label_on">Alternate speed limit on</string>
    <string name="app_icon">App icon</string>
    <string name="app_name">Gear Shift</string>
    <string name="base_sort">Secondary sorting</string>
    <string name="base_sort_method">Base sort method</string>
    <string name="base_sort_order">Sorting direction</string>
    <string name="blocklist_update_error">&lt;font color=#CC0000>Error&lt;/font></string>
    <string name="blocklist_updating">Updating</string>
    <string name="close_drawer">close drawer</string>
    <string name="con_directories">Download Directories</string>
    <string name="con_host">Host</string>
    <string name="con_host_cannot_be_empty">The host cannot be empty</string>
    <string name="con_name_cannot_be_empty">The profile name cannot be empty</string>
    <string name="con_password">Password</string>
    <string name="con_path">Path</string>
    <string name="con_path_default">/transmission/rpc</string>
    <string name="con_port">Port</string>
    <string name="con_port_default">9091</string>
    <string name="con_retries">Retry</string>
    <string name="con_timeout">Timeout</string>
    <string name="con_timeout_default">40</string>
    <string name="con_use_ssl">Use SSL</string>
    <string name="con_username">Username</string>
    <string name="connecting_empty_list">&lt;h2>&lt;font color=#666666>Connecting&lt;/font>&lt;/h2></string>
    <string name="connection">Connection</string>
    <string name="copy">Copy</string>
    <string name="create_profile_in_settings">Create a new profile in the settings</string>
    <string name="debug">Debug</string>
    <string name="debug_summary">Display debug information in the logcat</string>
    <string name="delete">Delete</string>
    <string name="delete_current_confirmation">"Are you sure you want to remove and delete the data of '%s'?"</string>
    <string name="delete_local_checkbox">Remove local torrent file</string>
    <string name="delete_selected_confirmation">Are you sure you want to remove and delete the data of the selected torrents?</string>
    <string name="developer_options">Developer options</string>
    <string name="directory">Directory</string>
    <string name="directory_filters">Directory filters</string>
    <string name="done">Done</string>
    <string name="duplicate_torrent">This torrent is already in the list.</string>
    <string name="empty_string" />
    <string name="error_deleting_torrent_file">Unable to delete torrent file</string>
    <string name="error_reading_torrent_file">Error while reading the torrent file</string>
    <string name="error_title">Error!</string>
    <string name="filter">Filter</string>
    <string name="filter_visibility">Filter visibility</string>
    <string name="find">Find</string>
    <string name="free_space_format">&lt;b>Free Space&lt;/b>: %1$s</string>
    <string name="full_update">Full update</string>
    <string name="full_update_summary_format">Every %1$d active updates</string>
    <string name="generic_http_empty_list">&lt;h2>&lt;font color=#cc0000>HTTP client error!&lt;/font>&lt;/h2>The server might be expecting an SSL connection.</string>
    <string name="header_label_filters">Filters</string>
    <string name="header_label_general_preferences">General</string>
    <string name="header_label_profiles">Profiles</string>
    <string name="header_label_sort">Sorting options</string>
    <string name="ic_menu_select_all">Select All</string>
    <string name="import_session_directories">Import session directories</string>
    <string name="invalid_input_title">Invalid Input</string>
    <string name="invalid_torrent">The torrent being added is invalid or corrupt.</string>
    <string name="menu_directories_header">Directories</string>
    <string name="menu_filters_active">Active</string>
    <string name="menu_filters_all">All</string>
    <string name="menu_filters_checking">Checking</string>
    <string name="menu_filters_complete">Complete</string>
    <string name="menu_filters_downloading">Downloading</string>
    <string name="menu_filters_header">Filters</string>
    <string name="menu_filters_incomplete">Incomplete</string>
    <string name="menu_filters_paused">Paused</string>
    <string name="menu_filters_seeding">Seeding</string>
    <string name="menu_high_priority">High priority</string>
    <string name="menu_low_priority">Low priority</string>
    <string name="menu_normal_priority">Normal priority</string>
    <string name="menu_order_descending">Descending</string>
    <string name="menu_order_header">Order</string>
    <string name="menu_sort_activity">Activity</string>
    <string name="menu_sort_age">Age</string>
    <string name="menu_sort_download_speed">Download speed</string>
    <string name="menu_sort_header">Sort By</string>
    <string name="menu_sort_location">Location</string>
    <string name="menu_sort_name">Name</string>
    <string name="menu_sort_peers">Peers</string>
    <string name="menu_sort_progress">Progress</string>
    <string name="menu_sort_queue">Queue position</string>
    <string name="menu_sort_ratio">Ratio</string>
    <string name="menu_sort_size">Size</string>
    <string name="menu_sort_status">Status</string>
    <string name="menu_sort_upload_speed">Upload speed</string>
    <string name="menu_trackers_header">Trackers</string>
    <string name="move">Move</string>
    <string name="move_checkbox">Move the data from its current location</string>
    <string name="no_connection_empty_list">&lt;h2>&lt;font color=#cc0000>Unable to connect!&lt;/font>&lt;/h2>Please check if the server address and port in your current profile are correct.</string>
    <string name="no_connectivity_empty_list">&lt;h2>&lt;font color=#cc0000>You need an active network connection!&lt;/font>&lt;/h2></string>
    <string name="no_download_dirs">&lt;h2>You have no extra download directories.&lt;/h2>Adding some here will allow you to change the location of any torrent in this profile.</string>
    <string name="no_filtered_torrents_empty_list">No torrents match the current filter</string>
    <string name="no_json_empty_list">&lt;h2>&lt;font color=#cc0000>Unexpected response!&lt;/font>&lt;/h2>Please check if the RPC path in your current profile is correct.</string>
    <string name="no_profiles">No profiles</string>
    <string name="no_profiles_empty_list">&lt;h2>No profile seems to have been created yet.&lt;/h2>You should add one by visiting the &lt;i>settings&lt;/i>.</string>
    <string name="no_torrents_empty_list">"&lt;h2>You are connected!&lt;/h2>The daemon doesn't manage any torrents at the moment."</string>
    <string name="no_tracker_errors">No errors</string>
    <string name="none">None</string>
    <string name="number_dialog_delete">Delete a digit</string>
    <string name="open_drawer">open drawer</string>
    <string name="out_of_memory_empty_list">&lt;h2>&lt;font color=#cc0000>Out of memory!&lt;/font>&lt;/h2></string>
    <string name="pause">Pause</string>
    <string name="port_test_closed">&lt;font color=#E73939>Closed&lt;/font></string>
    <string name="port_test_error">&lt;font color=#CC0000>Error&lt;/font></string>
    <string name="port_test_open">&lt;font color=#7CAF00>Open&lt;/font></string>
    <string name="port_test_testing">Testing …</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_name_default">Default</string>
    <string name="profile_summary_format">%1$s</string>
    <string name="reading_torrent_file">Reading .torrent file …</string>
    <string name="reannounce">Request more peers</string>
    <string name="refresh">Refresh</string>
    <string name="remove">Remove</string>
    <string name="remove_current_confirmation">"Are you sure you want to remove '%s'?"</string>
    <string name="remove_data">Remove and delete the data</string>
    <string name="remove_selected_confirmation">Are you sure you want to remove the selected torrents?</string>
    <string name="remove_selected_directories_confirmation">Are you sure you want to remove the selected directories?</string>
    <string name="replace">Replace</string>
    <string name="response_error_empty_list">&lt;h2>&lt;font color=#cc0000>Transmission daemon error!&lt;/font>&lt;/h2>A request to the daemon was not successful. See the logcat for more details.</string>
    <string name="resume">Resume</string>
    <string name="session_settings_alt_down_limit">Alternate Download limit (KiB/s)</string>
    <string name="session_settings_alt_limit_time_format">%1$02d:%2$02d</string>
    <string name="session_settings_alt_limits">Alternate limits</string>
    <string name="session_settings_alt_time">Time</string>
    <string name="session_settings_alt_time_range">Alternate time range</string>
    <string name="session_settings_alt_upload_limit">Alternate Upload limit (KiB/s)</string>
    <string name="session_settings_bandwidth">Bandwidth</string>
    <string name="session_settings_behavior">Behavior</string>
    <string name="session_settings_blocklist">Blocklist</string>
    <string name="session_settings_blocklist_count_format">%1$d entries</string>
    <string name="session_settings_blocklist_enable">Enable the blocklist</string>
    <string name="session_settings_blocklist_update">Update</string>
    <string name="session_settings_blocklist_url">URL</string>
    <string name="session_settings_cache_size">Cache size (MiB)</string>
    <string name="session_settings_connections">Connections</string>
    <string name="show_directory_filters">Show directory filters</string>
    <string name="show_status_bar">Status bar</string>
    <string name="show_tracker_filters">Show tracker filters</string>
    <string name="tracker_filters">Tracker filters</string>
    <string name="update_active_torrents">Update active torrents only</string>
    <string name="update_interval">Update interval</string>
    <string name="update_interval_dialog_title">Update interval</string>
    <string name="updates">Updates</string>
    <string name="user_interface_header">User interface</string>
    <string name="remove_tracker">Remove</string>
    <string name="show_status_bar_summary">Status bar below the torrent list</string>
    <string name="update_active_torrents_summary">Update active torrents only</string>
</resources>