<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/filter_visibility">
        <CheckBoxPreference android:title="@string/menu_filters_all" android:key="filter_all" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/menu_filters_downloading" android:key="filter_downloading" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/menu_filters_seeding" android:key="filter_seeding" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/menu_filters_paused" android:key="filter_paused" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/menu_filters_complete" android:key="filter_complete" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/menu_filters_incomplete" android:key="filter_incomplete" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/menu_filters_active" android:key="filter_active" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/menu_filters_checking" android:key="filter_checking" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/directory_filters">
        <CheckBoxPreference android:title="@string/show_directory_filters" android:key="filter_directories" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/tracker_filters">
        <CheckBoxPreference android:title="@string/show_tracker_filters" android:key="filter_trackers" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
